utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_partially_adjacently_tagged_unit_variant.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "oneOf": [
    {
      "properties": {
        "content": {
          "properties": {
            "n": {
              "format": "int32",
              "type": "integer"
            }
          },
          "required": [
            "n"
          ],
          "type": "object"
        },
        "type": {
          "enum": [
            "One"
          ],
          "type": "string"
        }
      },
      "required": [
        "content",
        "type"
      ],
      "type": "object"
    },
    {
      "default": null,
      "type": "null"
    }
  ]
}
