utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_partially_internally_tagged_named_fields.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "oneOf": [
    {
      "properties": {
        "n": {
          "format": "int32",
          "type": "integer"
        },
        "type": {
          "enum": [
            "One"
          ],
          "type": "string"
        }
      },
      "required": [
        "n",
        "type"
      ],
      "type": "object"
    },
    {
      "properties": {
        "m": {
          "format": "int32",
          "type": "integer"
        }
      },
      "required": [
        "m"
      ],
      "type": "object"
    }
  ]
}
