utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_partially_internally_tagged_partially_renamed.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "oneOf": [
    {
      "properties": {
        "type": {
          "enum": [
            "First"
          ],
          "type": "string"
        }
      },
      "required": [
        "type"
      ],
      "type": "object"
    },
    {
      "minimum": 0,
      "type": "integer"
    }
  ]
}
