utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_partially_untagged.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "oneOf": [
    {
      "enum": [
        "One"
      ],
      "type": "string"
    },
    {
      "type": "string"
    }
  ]
}
