utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_partially_untagged_partially_renamed.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "oneOf": [
    {
      "enum": [
        "First"
      ],
      "type": "string"
    },
    {
      "minimum": 0,
      "type": "integer"
    }
  ]
}
