utoipa-gen/tests/snapshots/schema_derive_test__derive_mixed_enum_serde_partially_untagged_unit_variant.snap
---
source: utoipa-gen/tests/schema_derive_test.rs
expression: value
---
{
  "oneOf": [
    {
      "properties": {
        "One": {
          "properties": {
            "n": {
              "format": "int32",
              "type": "integer"
            }
          },
          "required": [
            "n"
          ],
          "type": "object"
        }
      },
      "required": [
        "One"
      ],
      "type": "object"
    },
    {
      "default": null,
      "type": "null"
    }
  ]
}
